k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chm
  labels:
    name: chm
    monitoring: prometheus
